--- a/_data/sidebar/devops.yml
+++ b/_data/sidebar/devops.yml
@@ -11,6 +11,9 @@ menus:
       - id: method
         icon: api
         name: 方法调试
+      - id: jad
+        icon: coffee
+        name: Jad
 #  - id: logger
 #    icon: api
 #    name: Logger
